# vrindavan-dairy

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
backend/: pyproject.toml  run_backend.py
backend/app/: main.py
backend/app/core/: backup.py  constants.py  database.py  excel.py  paths.py
backend/app/modules/billing/: routes.py  schemas.py  service.py
backend/app/modules/customers/: models.py  routes.py  schemas.py
backend/app/modules/daily_entry/: routes.py  schemas.py  service.py
backend/app/modules/entries/: routes.py  service.py
backend/app/modules/extras/: routes.py  service.py
backend/app/modules/payments/: routes.py  schemas.py  service.py
backend/app/modules/products/: models.py  routes.py  schemas.py
backend/app/modules/reports/: routes.py  services.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/electron/: main.cjs
frontend/src/: App.tsx  AppLayout.tsx  index.css
frontend/src/api/: billBulk.ts  billPreview.ts  billing.ts  client.ts  customers.ts  dailyEntry.ts  payments.ts  products.ts  report.ts
frontend/src/components/: CustomerManagementSearch.tsx  CustomerSearch.tsx  DashboardCard.tsx  DetailedBillCard.tsx  NewBillCard.tsx  PageLayout.tsx  SectionCard.tsx  productSearch.tsx
frontend/src/pages/: BillingPage.tsx  BulkBillPrintPage.tsx  CustomerManagementPage.tsx  CustomerReportPage.tsx  DailyEntryPage.tsx  DashboardPage.tsx  PaymentPage.tsx  ProductManagementPage.tsx  SingleBillPrintingPage.tsx
frontend/src/types/: billPreview.ts  billing.ts  customer.ts  dailyEntry.ts  (+3 more)
