[project]
name = "milk-entry-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "RaamJain",email = "jain.raam@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-openpyxl (>=3.1.5.20260518,<4.0.0.0)",
    "nuitka (>=4.1.3,<5.0.0)",
    "zstandard (>=0.25.0,<0.26.0)"
]
